style.css: fix the phone number overlapping `contactbtn`
* By default, button element is inline-block, which means it's as wide
* as its content.
*
* Giving it a width of 100px caused the button to be exactly that wide,
* with the text overlapping it.

--- a/src/style.css
+++ b/src/style.css
@@ -326,7 +326,6 @@ main {
   border: none;
   border-radius: 10px;
   padding: 10px;
-  width: 100px;
   margin: 4px 5px;
   cursor: pointer;
   transition: 0.3s ease-in-out;
